--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "bash-greeting": "bash greeting.sh"
+    "bash-greeting": "bash greeting.sh",
+    "js-add": "node addition.js"
   },
   "repository": {
     "type": "git",
