--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prebash-greeting": "echo 'Before the greeting'",
     "bash-greeting": "bash greeting.sh",
+    "postbash-greeting": "echo 'After the greeting'",
     "js-add": "node addition.js"
   },
   "repository": {
